  `webkit`.
- Using `:tab-give` or `:tab-take` on the last tab in a window now always
  closes that window, no matter what `tabs.last_close` is set to.
- Redesigned `qute://settings` (`:set`) page with buttons for options with
  fixed values.
- The default `hint.selectors` now match more ARIA roles (`tab`, `checkbox`,
  `menuitem`, `menuitemcheckbox` and `menuitemradio`).

Added
~~~~~

- New `input.match_counts` option which allows to turn off count matching for
  more emacs-like bindings.

Fixed
~~~~~

- When `search.incremental` is disabled, searching using `/text` followed by a
  backwards search via `?text` (or vice-versa) now correctly changes the search
  direction.
- Elements getting a hint due to a `tabindex` now are skipped if it's set to
  `-1`, reducing some false-positives.
- The audible indicator (`[A]`) now uses a 2s cooldown when the audio goes
  silent, equivalent with the behavior of older QtWebEngine versions.
- With `confirm_quit` set to `downloads`, the confirmation dialog is now only
  shown when closing the last window (rather than closing any window, which
  would continue running that window's downloads). Unfortunately, more issues
  with `confirm_quit` and multiple windows remain.

[[v2.4.1]]
v2.4.1 (unreleased)
-------------------

Fixed
~~~~~

- Speculative fix for an immediate crash at start with the macOS/Windows
  binaries (in certain rare environments).
- Speculative fix for a qutebrowser crash when the notification daemon crashes
  while showing the notification.
- Fix crash when using `:screenshot` with an invalid `--rect` argument.
- Added a site-specific quirk to make cookie dialogs on StackExchange pages
  (such as Stack Overflow) work on Qt 5.12.

[[v2.4.0]]
v2.4.0 (2021-10-21)
-------------------

Security
~~~~~~~~

- **CVE-2021-41146**: Fix arbitrary command execution on Windows via URL handler
  argument injection. See the
  https://github.com/qutebrowser/qutebrowser/security/advisories/GHSA-vw27-fwjf-5qxm[security advisory]